--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wordcloud",
-  "version": "1.2.0",
+  "name": "wordcloud-cr",
+  "version": "1.2.1",
   "description": "Tag cloud/Wordle presentation on 2D canvas or HTML",
   "homepage": "http://timdream.org/wordcloud2.js/",
   "author": {
